# mini-curso-celery

./: .gitignore  docker-compose.yml  dump.rdb  pyproject.toml  readme.md
src/: config.py  main.py  models.py  tasks.py  wsgi.py
